[gd_scene load_steps=12 format=3 uid="uid://d0fk2c2uxwv2v"]

[ext_resource type="Script" path="res://Scenes/game_end.gd" id="1_4ixt4"]
[ext_resource type="Texture2D" uid="uid://bstimi2lr0o5i" path="res://Assets/Images/menu/endscenelose00.png" id="2_77bmk"]
[ext_resource type="Shader" path="res://Assets/Shaders/vignette.gdshader" id="3_8hbdn"]
[ext_resource type="Texture2D" uid="uid://clfp07fxm5k31" path="res://Assets/Images/UI/nobubblestextbox.png" id="4_u67ev"]
[ext_resource type="StyleBox" uid="uid://dxfb2rkb53eqr" path="res://Assets/Images/UI/return_grey.tres" id="5_2eaaf"]
[ext_resource type="Texture2D" uid="uid://beawij5ifyj7u" path="res://Assets/Images/UI/returnbutton.png" id="6_tvjyq"]
[ext_resource type="StyleBox" uid="uid://nx64ux6uy3tm" path="res://Assets/Images/UI/next_grey.tres" id="7_r22ky"]
[ext_resource type="Texture2D" uid="uid://d2yokanmtvv72" path="res://Assets/Images/UI/nextbutton.png" id="8_v2aab"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_focul"]
shader = ExtResource("3_8hbdn")
shader_parameter/alpha = 0.32
shader_parameter/inner_radius = 0.775
shader_parameter/outer_radius = 0.81
shader_parameter/r = 0.0
shader_parameter/g = 0.0
shader_parameter/b = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tqmed"]
texture = ExtResource("6_tvjyq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1vw40"]
texture = ExtResource("8_v2aab")

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_4ixt4")

[node name="backingbadend" type="ColorRect" parent="."]
offset_right = 1772.0
offset_bottom = 1261.0
color = Color(0.12549, 0.12549, 0.12549, 1)
metadata/_edit_use_anchors_ = true

[node name="BadEnd" type="TextureRect" parent="."]
offset_left = 50.0
offset_right = 1702.0
offset_bottom = 1238.0
texture = ExtResource("2_77bmk")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Vignette2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_focul")
offset_left = 3.0
offset_top = 2.0
offset_right = 1757.0
offset_bottom = 1241.0
metadata/_edit_use_anchors_ = true

[node name="Nobubblestextbox" type="Sprite2D" parent="."]
visible = false
position = Vector2(889, 993.75)
scale = Vector2(1.16406, 0.491287)
texture = ExtResource("4_u67ev")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 158.0
offset_top = 904.0
offset_right = 1575.0
offset_bottom = 1057.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "You've failed to quench the thirst of the low-blood-sugar horde, and it's last call for Bar'acuda. 
The fry cry when you swim past. Without your support, they'll have to leave the school and risk becoming fritters. 
Worse, the debts you took out to eradicate finfluenza in the Indian Ocean have caught up with you. 
The Sardine Mafia wants you sleeping with the fishes - and they have a can with your name on it.
"

[node name="ReturnBtn" type="Button" parent="."]
visible = false
offset_left = 1335.0
offset_top = 1102.0
offset_right = 2512.0
offset_bottom = 1361.0
scale = Vector2(0.29, 0.29)
theme_override_styles/hover_pressed = ExtResource("5_2eaaf")
theme_override_styles/hover = ExtResource("5_2eaaf")
theme_override_styles/normal = SubResource("StyleBoxTexture_tqmed")

[node name="ToTextBtn" type="Button" parent="."]
offset_left = 1491.0
offset_top = 1037.0
offset_right = 1906.0
offset_bottom = 1389.0
scale = Vector2(0.6, 0.6)
theme_override_styles/hover = ExtResource("7_r22ky")
theme_override_styles/pressed = ExtResource("7_r22ky")
theme_override_styles/normal = SubResource("StyleBoxTexture_1vw40")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ReturnBtn" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="ToTextBtn" to="." method="_on_to_text_btn_pressed"]
